# Automated_Python_Docstring

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  baseline.py  check_docs.py  config_loader.py  coverage.py  demo_80_percent.py  docgen_cli.py  docstring_injector.py  parser.py  pyproject.toml  requirements.txt  run_parser.py  sample.py  sample2.py  test_inject.py  validation.py
.github/workflows/: docs.yml
analyzer/: parser.py
config/: config_loader.py
generator/: baseline.py  styled_generator.py
injector/: docstring_injector.py
reports/: coverage.py  validation.py
scripts/: check_docs.py  inject_docs.py
src/: sample2.py
src/docgen/: check_docs.py  cli.py
src/docgen/analyzer/: parser.py
src/docgen/injector/: docstring_injector.py
tests/: test_edge_cases.py  test_generator.py  test_parser.py  test_validator.py
ui/: app.py  review_app.py
workflows/: docs.yml
